Modify some things

--- a/s/signal-desktop/manifest.x86_64.jsonc
+++ b/s/signal-desktop/manifest.x86_64.jsonc
@@ -53,148 +53,134 @@
 				"soname(libxkbcommon.so.0(x86_64))"
 			],
 			"files": [
-				"/usr/bin",
-				"/usr/share/applications",
-				"/usr/share/icons/hicolor/1024x1024/apps/signal-desktop.png",
-				"/usr/share/icons/hicolor/128x128/apps/signal-desktop.png",
-				"/usr/share/icons/hicolor/16x16/apps/signal-desktop.png",
-				"/usr/share/icons/hicolor/24x24/apps/signal-desktop.png",
-				"/usr/share/icons/hicolor/256x256/apps/signal-desktop.png",
-				"/usr/share/icons/hicolor/32x32/apps/signal-desktop.png",
-				"/usr/share/icons/hicolor/48x48/apps/signal-desktop.png",
-				"/usr/share/icons/hicolor/512x512/apps/signal-desktop.png",
-				"/usr/share/icons/hicolor/64x64/apps/signal-desktop.png",
-				"/usr/share/pixmaps",
-				"/usr/share/signal-desktop",
-				"/usr/share/signal-desktop/LICENSE.electron.txt",
-				"/usr/share/signal-desktop/LICENSES.chromium.html",
-				"/usr/share/signal-desktop/chrome-sandbox",
-				"/usr/share/signal-desktop/chrome_100_percent.pak",
-				"/usr/share/signal-desktop/chrome_200_percent.pak",
-				"/usr/share/signal-desktop/chrome_crashpad_handler",
-				"/usr/share/signal-desktop/icudtl.dat",
-				"/usr/share/signal-desktop/libEGL.so",
-				"/usr/share/signal-desktop/libGLESv2.so",
-				"/usr/share/signal-desktop/libffmpeg.so",
-				"/usr/share/signal-desktop/libvk_swiftshader.so",
-				"/usr/share/signal-desktop/libvulkan.so.1",
-				"/usr/share/signal-desktop/locales/af-ZA.pak",
-				"/usr/share/signal-desktop/locales/af.pak",
-				"/usr/share/signal-desktop/locales/am.pak",
-				"/usr/share/signal-desktop/locales/ar.pak",
-				"/usr/share/signal-desktop/locales/az-AZ.pak",
-				"/usr/share/signal-desktop/locales/bg-BG.pak",
-				"/usr/share/signal-desktop/locales/bg.pak",
-				"/usr/share/signal-desktop/locales/bn-BD.pak",
-				"/usr/share/signal-desktop/locales/bn.pak",
-				"/usr/share/signal-desktop/locales/bs-BA.pak",
-				"/usr/share/signal-desktop/locales/ca.pak",
-				"/usr/share/signal-desktop/locales/cs.pak",
-				"/usr/share/signal-desktop/locales/da.pak",
-				"/usr/share/signal-desktop/locales/de.pak",
-				"/usr/share/signal-desktop/locales/el.pak",
-				"/usr/share/signal-desktop/locales/en-GB.pak",
-				"/usr/share/signal-desktop/locales/en-US.pak",
-				"/usr/share/signal-desktop/locales/es-419.pak",
-				"/usr/share/signal-desktop/locales/es.pak",
-				"/usr/share/signal-desktop/locales/et-EE.pak",
-				"/usr/share/signal-desktop/locales/et.pak",
-				"/usr/share/signal-desktop/locales/eu.pak",
-				"/usr/share/signal-desktop/locales/fa-IR.pak",
-				"/usr/share/signal-desktop/locales/fa.pak",
-				"/usr/share/signal-desktop/locales/fi.pak",
-				"/usr/share/signal-desktop/locales/fil.pak",
-				"/usr/share/signal-desktop/locales/fr.pak",
-				"/usr/share/signal-desktop/locales/ga-IE.pak",
-				"/usr/share/signal-desktop/locales/gl-ES.pak",
-				"/usr/share/signal-desktop/locales/gu-IN.pak",
-				"/usr/share/signal-desktop/locales/gu.pak",
-				"/usr/share/signal-desktop/locales/he.pak",
-				"/usr/share/signal-desktop/locales/hi-IN.pak",
-				"/usr/share/signal-desktop/locales/hi.pak",
-				"/usr/share/signal-desktop/locales/hr-HR.pak",
-				"/usr/share/signal-desktop/locales/hr.pak",
-				"/usr/share/signal-desktop/locales/hu.pak",
-				"/usr/share/signal-desktop/locales/id.pak",
-				"/usr/share/signal-desktop/locales/it.pak",
-				"/usr/share/signal-desktop/locales/ja.pak",
-				"/usr/share/signal-desktop/locales/ka-GE.pak",
-				"/usr/share/signal-desktop/locales/kk-KZ.pak",
-				"/usr/share/signal-desktop/locales/km-KH.pak",
-				"/usr/share/signal-desktop/locales/kn-IN.pak",
-				"/usr/share/signal-desktop/locales/kn.pak",
-				"/usr/share/signal-desktop/locales/ko.pak",
-				"/usr/share/signal-desktop/locales/ky-KG.pak",
-				"/usr/share/signal-desktop/locales/lt-LT.pak",
-				"/usr/share/signal-desktop/locales/lt.pak",
-				"/usr/share/signal-desktop/locales/lv-LV.pak",
-				"/usr/share/signal-desktop/locales/lv.pak",
-				"/usr/share/signal-desktop/locales/mk-MK.pak",
-				"/usr/share/signal-desktop/locales/ml-IN.pak",
-				"/usr/share/signal-desktop/locales/ml.pak",
-				"/usr/share/signal-desktop/locales/mr-IN.pak",
-				"/usr/share/signal-desktop/locales/mr.pak",
-				"/usr/share/signal-desktop/locales/ms.pak",
-				"/usr/share/signal-desktop/locales/my.pak",
-				"/usr/share/signal-desktop/locales/nb.pak",
-				"/usr/share/signal-desktop/locales/nl.pak",
-				"/usr/share/signal-desktop/locales/pa-IN.pak",
-				"/usr/share/signal-desktop/locales/pl.pak",
-				"/usr/share/signal-desktop/locales/pt-BR.pak",
-				"/usr/share/signal-desktop/locales/pt-PT.pak",
-				"/usr/share/signal-desktop/locales/ro-RO.pak",
-				"/usr/share/signal-desktop/locales/ro.pak",
-				"/usr/share/signal-desktop/locales/ru.pak",
-				"/usr/share/signal-desktop/locales/sk-SK.pak",
-				"/usr/share/signal-desktop/locales/sk.pak",
-				"/usr/share/signal-desktop/locales/sl-SI.pak",
-				"/usr/share/signal-desktop/locales/sl.pak",
-				"/usr/share/signal-desktop/locales/sq-AL.pak",
-				"/usr/share/signal-desktop/locales/sr.pak",
-				"/usr/share/signal-desktop/locales/sv.pak",
-				"/usr/share/signal-desktop/locales/sw.pak",
-				"/usr/share/signal-desktop/locales/ta-IN.pak",
-				"/usr/share/signal-desktop/locales/ta.pak",
-				"/usr/share/signal-desktop/locales/te-IN.pak",
-				"/usr/share/signal-desktop/locales/te.pak",
-				"/usr/share/signal-desktop/locales/th.pak",
-				"/usr/share/signal-desktop/locales/tl-PH.pak",
-				"/usr/share/signal-desktop/locales/tr.pak",
-				"/usr/share/signal-desktop/locales/ug.pak",
-				"/usr/share/signal-desktop/locales/uk-UA.pak",
-				"/usr/share/signal-desktop/locales/uk.pak",
-				"/usr/share/signal-desktop/locales/ur.pak",
-				"/usr/share/signal-desktop/locales/vi.pak",
-				"/usr/share/signal-desktop/locales/yue.pak",
-				"/usr/share/signal-desktop/locales/zh-CN.pak",
-				"/usr/share/signal-desktop/locales/zh-HK.pak",
-				"/usr/share/signal-desktop/locales/zh-Hant.pak",
-				"/usr/share/signal-desktop/locales/zh-TW.pak",
-				"/usr/share/signal-desktop/resources.pak",
-				"/usr/share/signal-desktop/resources/app-update.yml",
-				"/usr/share/signal-desktop/resources/app.asar",
-				"/usr/share/signal-desktop/resources/app.asar.unpacked/node_modules/@signalapp/libsignal-client/prebuilds/linux-x64/@signalapp+libsignal-client.node",
-				"/usr/share/signal-desktop/resources/app.asar.unpacked/node_modules/@signalapp/ringrtc/build/linux/libringrtc-x64.node",
-				"/usr/share/signal-desktop/resources/app.asar.unpacked/node_modules/@signalapp/sqlcipher/prebuilds/linux-x64/@signalapp+sqlcipher.node",
-				"/usr/share/signal-desktop/resources/app.asar.unpacked/node_modules/fs-xattr/build/Release/xattr.node",
-				"/usr/share/signal-desktop/resources/apparmor-profile",
-				"/usr/share/signal-desktop/resources/org.signalapp.enable-backups.policy",
-				"/usr/share/signal-desktop/resources/org.signalapp.plaintext-export.policy",
-				"/usr/share/signal-desktop/resources/org.signalapp.view-aep.policy",
-				"/usr/share/signal-desktop/resources/package-type",
-				"/usr/share/signal-desktop/signal-desktop",
-				"/usr/share/signal-desktop/snapshot_blob.bin",
-				"/usr/share/signal-desktop/v8_context_snapshot.bin",
-				"/usr/share/signal-desktop/vk_swiftshader_icd.json"
+				"/usr/lib/signal/LICENSE.electron.txt",
+				"/usr/lib/signal/LICENSES.chromium.html",
+				"/usr/lib/signal/chrome-sandbox",
+				"/usr/lib/signal/chrome_100_percent.pak",
+				"/usr/lib/signal/chrome_200_percent.pak",
+				"/usr/lib/signal/chrome_crashpad_handler",
+				"/usr/lib/signal/icudtl.dat",
+				"/usr/lib/signal/libEGL.so",
+				"/usr/lib/signal/libGLESv2.so",
+				"/usr/lib/signal/libffmpeg.so",
+				"/usr/lib/signal/libvk_swiftshader.so",
+				"/usr/lib/signal/libvulkan.so.1",
+				"/usr/lib/signal/locales/af-ZA.pak",
+				"/usr/lib/signal/locales/af.pak",
+				"/usr/lib/signal/locales/am.pak",
+				"/usr/lib/signal/locales/ar.pak",
+				"/usr/lib/signal/locales/az-AZ.pak",
+				"/usr/lib/signal/locales/bg-BG.pak",
+				"/usr/lib/signal/locales/bg.pak",
+				"/usr/lib/signal/locales/bn-BD.pak",
+				"/usr/lib/signal/locales/bn.pak",
+				"/usr/lib/signal/locales/bs-BA.pak",
+				"/usr/lib/signal/locales/ca.pak",
+				"/usr/lib/signal/locales/cs.pak",
+				"/usr/lib/signal/locales/da.pak",
+				"/usr/lib/signal/locales/de.pak",
+				"/usr/lib/signal/locales/el.pak",
+				"/usr/lib/signal/locales/en-GB.pak",
+				"/usr/lib/signal/locales/en-US.pak",
+				"/usr/lib/signal/locales/es-419.pak",
+				"/usr/lib/signal/locales/es.pak",
+				"/usr/lib/signal/locales/et-EE.pak",
+				"/usr/lib/signal/locales/et.pak",
+				"/usr/lib/signal/locales/eu.pak",
+				"/usr/lib/signal/locales/fa-IR.pak",
+				"/usr/lib/signal/locales/fa.pak",
+				"/usr/lib/signal/locales/fi.pak",
+				"/usr/lib/signal/locales/fil.pak",
+				"/usr/lib/signal/locales/fr.pak",
+				"/usr/lib/signal/locales/ga-IE.pak",
+				"/usr/lib/signal/locales/gl-ES.pak",
+				"/usr/lib/signal/locales/gu-IN.pak",
+				"/usr/lib/signal/locales/gu.pak",
+				"/usr/lib/signal/locales/he.pak",
+				"/usr/lib/signal/locales/hi-IN.pak",
+				"/usr/lib/signal/locales/hi.pak",
+				"/usr/lib/signal/locales/hr-HR.pak",
+				"/usr/lib/signal/locales/hr.pak",
+				"/usr/lib/signal/locales/hu.pak",
+				"/usr/lib/signal/locales/id.pak",
+				"/usr/lib/signal/locales/it.pak",
+				"/usr/lib/signal/locales/ja.pak",
+				"/usr/lib/signal/locales/ka-GE.pak",
+				"/usr/lib/signal/locales/kk-KZ.pak",
+				"/usr/lib/signal/locales/km-KH.pak",
+				"/usr/lib/signal/locales/kn-IN.pak",
+				"/usr/lib/signal/locales/kn.pak",
+				"/usr/lib/signal/locales/ko.pak",
+				"/usr/lib/signal/locales/ky-KG.pak",
+				"/usr/lib/signal/locales/lt-LT.pak",
+				"/usr/lib/signal/locales/lt.pak",
+				"/usr/lib/signal/locales/lv-LV.pak",
+				"/usr/lib/signal/locales/lv.pak",
+				"/usr/lib/signal/locales/mk-MK.pak",
+				"/usr/lib/signal/locales/ml-IN.pak",
+				"/usr/lib/signal/locales/ml.pak",
+				"/usr/lib/signal/locales/mr-IN.pak",
+				"/usr/lib/signal/locales/mr.pak",
+				"/usr/lib/signal/locales/ms.pak",
+				"/usr/lib/signal/locales/my.pak",
+				"/usr/lib/signal/locales/nb.pak",
+				"/usr/lib/signal/locales/nl.pak",
+				"/usr/lib/signal/locales/pa-IN.pak",
+				"/usr/lib/signal/locales/pl.pak",
+				"/usr/lib/signal/locales/pt-BR.pak",
+				"/usr/lib/signal/locales/pt-PT.pak",
+				"/usr/lib/signal/locales/ro-RO.pak",
+				"/usr/lib/signal/locales/ro.pak",
+				"/usr/lib/signal/locales/ru.pak",
+				"/usr/lib/signal/locales/sk-SK.pak",
+				"/usr/lib/signal/locales/sk.pak",
+				"/usr/lib/signal/locales/sl-SI.pak",
+				"/usr/lib/signal/locales/sl.pak",
+				"/usr/lib/signal/locales/sq-AL.pak",
+				"/usr/lib/signal/locales/sr.pak",
+				"/usr/lib/signal/locales/sv.pak",
+				"/usr/lib/signal/locales/sw.pak",
+				"/usr/lib/signal/locales/ta-IN.pak",
+				"/usr/lib/signal/locales/ta.pak",
+				"/usr/lib/signal/locales/te-IN.pak",
+				"/usr/lib/signal/locales/te.pak",
+				"/usr/lib/signal/locales/th.pak",
+				"/usr/lib/signal/locales/tl-PH.pak",
+				"/usr/lib/signal/locales/tr.pak",
+				"/usr/lib/signal/locales/ug.pak",
+				"/usr/lib/signal/locales/uk-UA.pak",
+				"/usr/lib/signal/locales/uk.pak",
+				"/usr/lib/signal/locales/ur.pak",
+				"/usr/lib/signal/locales/vi.pak",
+				"/usr/lib/signal/locales/yue.pak",
+				"/usr/lib/signal/locales/zh-CN.pak",
+				"/usr/lib/signal/locales/zh-HK.pak",
+				"/usr/lib/signal/locales/zh-Hant.pak",
+				"/usr/lib/signal/locales/zh-TW.pak",
+				"/usr/lib/signal/resources.pak",
+				"/usr/lib/signal/resources/app-update.yml",
+				"/usr/lib/signal/resources/app.asar",
+				"/usr/lib/signal/resources/app.asar.unpacked/node_modules/@signalapp/libsignal-client/prebuilds/linux-x64/@signalapp+libsignal-client.node",
+				"/usr/lib/signal/resources/app.asar.unpacked/node_modules/@signalapp/ringrtc/build/linux/libringrtc-x64.node",
+				"/usr/lib/signal/resources/app.asar.unpacked/node_modules/@signalapp/sqlcipher/prebuilds/linux-x64/@signalapp+sqlcipher.node",
+				"/usr/lib/signal/resources/app.asar.unpacked/node_modules/fs-xattr/build/Release/xattr.node",
+				"/usr/lib/signal/resources/apparmor-profile",
+				"/usr/lib/signal/resources/org.signalapp.enable-backups.policy",
+				"/usr/lib/signal/resources/org.signalapp.plaintext-export.policy",
+				"/usr/lib/signal/resources/org.signalapp.view-aep.policy",
+				"/usr/lib/signal/resources/package-type",
+				"/usr/lib/signal/signal-desktop",
+				"/usr/lib/signal/snapshot_blob.bin",
+				"/usr/lib/signal/v8_context_snapshot.bin",
+				"/usr/lib/signal/vk_swiftshader_icd.json"
 			],
 			"name": "signal-desktop",
 			"provides": [
-				"binary(bin)",
-				"soname(signal-desktop/libEGL.so(x86_64))",
-				"soname(signal-desktop/libGLESv2.so(x86_64))",
-				"soname(signal-desktop/libffmpeg.so(x86_64))",
-				"soname(signal-desktop/libvk_swiftshader.so(x86_64))",
-				"soname(signal-desktop/libvulkan.so.1(x86_64))"
+				"soname(signal/libEGL.so(x86_64))",
+				"soname(signal/libGLESv2.so(x86_64))",
+				"soname(signal/libffmpeg.so(x86_64))",
+				"soname(signal/libvk_swiftshader.so(x86_64))",
+				"soname(signal/libvulkan.so.1(x86_64))"
 			]
 		}
 	},
